fix: remove horizontal scroll

--- a/cssBayan/style.css
+++ b/cssBayan/style.css
@@ -8,6 +8,7 @@
 body {
     min-height: 100vh;
     width: 100vw;
+    overflow-x: hidden;
     padding: 20px 10%;
     background: linear-gradient(to right, #efe1ee, #77e6c1);
 }
